# multi_robot_calibration

./: .gitignore  CalibrateOffsetCube.m  Cmm2Robot.m  README.md
CMM_data/40PointCloudProjected/: 40PointCloud.xlsx
CMM_data/40PointCloudRaw/: 40PointCloud.csv  data.csv  rob1_self_transform_092424.csv  robot_to_robot_091124.csv
CMM_data/ToolCloud/: tool_cloud.csv
matlab/: CMMCloudRead.m  CalibrateOffsetCube.m  CloudReg.m  Cmm2Robot.m  EE_poses.m  FrameAlign.m  OptimizeKine.m  SimulatedDataGen.m  ToolFrameCalibrate.m  buildRobot.m  buildRobotDH.m  centroidCost.m  slerping.m  teapotTest.m  whiteboard.m
matlab/ToolFrameCalibration/: EE_poses.m  ToolFrameCalibrate.m  ToolInBase.m
python/: calibrate.py  iterative_calibration.py  kinematics_check.py  optimize_kinematics.py  optimize_kinematics_sim.py  pyproject.toml  requirements.txt
python/mr_calibration/: __init__.py  bf_calibration.py  core.py  dh_robot.py  geometry.py  iterative_calibration.py  keyence_cmm.py  tool_calibration.py  wobj_calibration.py
python/mr_calibration/core/: __init__.py  geometry.py  utilities.py
python/mr_calibration/data/: base_frames.yaml  cubes.csv  rob_self_transform.csv  tool_calib_configs.csv  wobj_data.yaml
python/test/: test_calibration.py  test_robot.py
python/test/data/: robot_cloud.csv  tool_cloud.csv
robot_data/za_description/urdf/: za.urdf  za_macro.xacro
